--- a/ansible_playbooks/ansible_node_all_setup.yaml
+++ b/ansible_playbooks/ansible_node_all_setup.yaml
@@ -4,3 +4,11 @@
   gather_facts: yes
   become: yes
   tasks:
+    - name: Update hosts
+      lineinfile:
+        path: "/etc/hosts"
+        regexp: ".*\t{{ hostvars[item]['ansible_hostname']}}\t{{ hostvars[item]['ansible_hostname']}}"
+        line: "{{ hostvars[item]['ansible_ssh_host'] }}\t{{ hostvars[item]['ansible_hostname']}}\t{{ hostvars[item]['ansible_hostname']}}"
+        state: present
+        backup: yes
+      with_items: "{{ ansible_play_batch }}" 
