Create Firewall Policy To Deny Everything and Enable UFW

--- a/ansible_playbooks/ansible_node_master_setup.yaml
+++ b/ansible_playbooks/ansible_node_master_setup.yaml
@@ -3,6 +3,10 @@
   hosts: dev_cicd_node_masters
   become: yes
   tasks:
+    - name: Create Policy To Deny Everything And Enable UFW
+      community.general.ufw:
+        state: enabled
+        policy: deny
     - name: Start Jenkins Service
       systemd:
         name: jenkins
