--- a/ansible_playbooks/ansible_node_master_setup.yaml
+++ b/ansible_playbooks/ansible_node_master_setup.yaml
@@ -7,6 +7,11 @@
       community.general.ufw:
         state: enabled
         policy: deny
+    - name: Create Policy To Allow Any Traffic To TCP Port 8080
+      community.general.ufw:
+        rule: allow
+        port: '8080'
+        proto: tcp
     - name: Start Jenkins Service
       systemd:
         name: jenkins
