--- a/ansible_playbooks/ansible_node_master_setup.yaml
+++ b/ansible_playbooks/ansible_node_master_setup.yaml
@@ -12,6 +12,11 @@
         rule: allow
         port: '8080'
         proto: tcp
+    - name: Create Policy To Allow Any Traffic To TCP Port 22
+      community.general.ufw:
+        rule: allow
+        port: '22'
+        proto: tcp
     - name: Start Jenkins Service
       systemd:
         name: jenkins
