--- a/ansible_playbooks/ansible_node_master_setup.yaml
+++ b/ansible_playbooks/ansible_node_master_setup.yaml
@@ -33,6 +33,11 @@
       systemd:
         name: jenkins
         state: stopped
+    - name: Delete JENKINS_HOME directory
+      file:
+        state: absent
+        path: /var/lib/jenkins
+
     - name: Start Jenkins Service
       systemd:
         name: jenkins
