--- a/ansible_playbooks/ansible_node_master_setup.yaml
+++ b/ansible_playbooks/ansible_node_master_setup.yaml
@@ -48,6 +48,15 @@
         - '/var/cache/jenkins/tmp'
         - '/var/cache/jenkins/heapdumps'
         - '/var/lib/jenkins'
+    - name: Create Directories For Systemd Override File
+      file:
+        path: "{{ item }}"
+        state: directory
+        owner: root
+        group: root
+        recurse: yes
+      with_items:
+        - '/etc/systemd/system/jenkins.service.d'
 
     - name: Start Jenkins Service
       systemd:
