Create Policy To Allow Everything And Enable UFW

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -1,3 +1,9 @@
 - name: "Stage : Setup Software & Configuration On Node Worker"
   hosts: dev_cicd_node_workers
   become: yes
+
+  tasks:
+    - name: Create Policy To Allow Everything And Enable UFW
+      community.general.ufw:
+        state: enabled
+        policy: deny
