Create Policy To Allow Any Traffic To TCP Port 22

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -7,3 +7,8 @@
       community.general.ufw:
         state: enabled
         policy: deny
+    - name: Create Policy To Allow Any Traffic To TCP Port 22
+      community.general.ufw:
+        rule: allow
+        port: '22'
+        proto: tcp
