Create & Add Docker-CE Deb Repository

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -25,3 +25,7 @@
       ansible.builtin.apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
         state: present
+    - name: Create & Add Docker-CE Deb Repository
+      ansible.builtin.apt_repository:
+        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable
+        state: present
