--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -29,3 +29,10 @@
       ansible.builtin.apt_repository:
         repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable
         state: present
+    - name: Install Docker
+      apt:
+        name: 
+          - docker-ce
+          - docker-ce-cli
+          - containerd.io
+        state: latest
