Create & Add Docker Group

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -36,3 +36,8 @@
           - docker-ce-cli
           - containerd.io
         state: latest
+    - name: Create & Add Docker Group
+      group:
+        name: docker
+        state: present
+        
