Create & Add  To Docker Group

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -40,4 +40,9 @@
       group:
         name: docker
         state: present
+    - name: Create & Add $USER To Docker Group
+      user: 
+        name: "{{ ansible_user }}"
+        groups: docker
+        append: yes
         
