Update & Execute SSH Reset In Order To Reflect The  Group Changes

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -45,4 +45,5 @@
         name: "{{ ansible_user }}"
         groups: docker
         append: yes
-        
+    - name: Update & Execute SSH Reset In Order To Reflect The $USER Group Changes
+      meta: reset_connection
