Start Docker service

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -47,3 +47,8 @@
         append: yes
     - name: Update & Execute SSH Reset In Order To Reflect The $USER Group Changes
       meta: reset_connection
+    - name: Start Docker service
+      systemd:
+        name: docker
+        state: restarted   
+        enabled: yes
