Create directory for Maven installation

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -61,3 +61,7 @@
           - tar
         state: present
         update_cache: yes
+    - name: Create directory for Maven installation
+      file:
+        path: /opt/maven
+        state: directory
