--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -74,3 +74,9 @@
         src: /tmp/apache-maven-3.8.6-bin.tar.gz
         dest: /opt/maven/
         remote_src: yes
+    - name: Create symbolic link for Maven
+      file:
+        src: /opt/maven/apache-maven-3.8.6
+        dest: /opt/maven/latest
+        state: link
+
