--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -95,4 +95,7 @@
       environment:
         MAVEN_HOME: /opt/maven/latest
         PATH: "{{ ansible_env.PATH }}:/opt/maven/latest/bin"
+    - name: Show Maven version
+      debug:
+        msg: "Installed Maven version: {{ maven_version.stdout }}"
         
