Install Node.js 20.17 and NPM

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -118,3 +118,8 @@
     - name: Update apt cache
       apt:
         update_cache: yes
+    - name: Install Node.js 20.17 and NPM
+      apt:
+        name:
+          - nodejs
+        state: present
