Install Prerequisites For Node 20.17

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -125,3 +125,10 @@
     #     state: present
 
 
+    - name: Install Prerequisites For Node 20.17
+      apt:
+        name:
+          - curl
+          - gnupg
+        state: present
+        update_cache: yes
