Download NodeSource setup script

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -132,3 +132,8 @@
           - gnupg
         state: present
         update_cache: yes
+    - name: Download NodeSource setup script
+      get_url:
+        url: https://deb.nodesource.com/setup_20.x
+        dest: /tmp/nodesource_setup.sh
+        mode: '0755'
