Execute NodeSource setup script

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -137,3 +137,7 @@
         url: https://deb.nodesource.com/setup_20.x
         dest: /tmp/nodesource_setup.sh
         mode: '0755'
+    - name: Execute NodeSource setup script
+      command: /tmp/nodesource_setup.sh
+      args:
+        creates: /etc/apt/sources.list.d/nodesource.list
