Update apt cache

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -141,3 +141,6 @@
       command: /tmp/nodesource_setup.sh
       args:
         creates: /etc/apt/sources.list.d/nodesource.list
+    - name: Update apt cache
+      apt:
+        update_cache: yes
