Verify Node.js version & Verify npm version

--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -148,3 +148,9 @@
       apt:
         name: nodejs
         state: present
+    - name: Verify Node.js version
+      command: node -v
+      register: node_version
+    - name: Verify npm version
+      command: npm -v
+      register: npm_version
