--- a/ansible_playbooks/ansible_node_worker_setup.yaml
+++ b/ansible_playbooks/ansible_node_worker_setup.yaml
@@ -1,7 +1,12 @@
 - name: "Stage : Setup Software & Configuration On Node Worker"
   hosts: dev_cicd_node_workers
   become: yes
+  vars:
+    node_major: 20
+    nodesource_repo: "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_{{ node_major }}.x nodistro main"
+    repo_file_path: /etc/apt/sources.list.d/nodesource.list
 
+    
   tasks:
     - name: Create Policy To Allow Everything And Enable UFW
       community.general.ufw:
